# Sygmail

./: .gitignore  LICENSE  README.md  pyproject.toml
sygmail/: __init__.py  cli.py  client.py
