[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sygmail"
version = "0.1.2"
license = "MIT"
description = "Lightweight Gmail notification wrapper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["yagmail", "keyring"]
authors = [{name = "Satoshi Nakabayashi"}]

[project.scripts]
sygmail = "sygmail.cli:main"